--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,11 +22,15 @@ jobs:
       with:
         file-name: package.json
         diff-search: true
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Read .nvmrc
+      id: node_version
+      if: steps.check.outputs.changed == 'true'
+      run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
+    - name: Setup Node
       if: steps.check.outputs.changed == 'true'
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: ${{ steps.node_version.outputs.NODE_VERSION }}
     - name: Install dependencies
       if: steps.check.outputs.changed == 'true'
       run: npm ci
