modify peer dependencies and prettier fix
Signed-off-by: Dimas Lanjaka <dimaslanjaka@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "hexo-generator-redirect",
-  "version": "1.4.0",
-  "description": "Hexo plugin that generates additional redirect pages",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sergeyzwezdin/hexo-generator-redirect.git"
-  },
-  "files": [
-    "index.js",
-    "lib/"
-  ],
-  "keywords": [
-    "hexo",
-    "generator",
-    "redirect"
-  ],
-  "author": "Sergey Zwezdin <sergey@zwezdin.com> (https://zwezdin.com)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/sergeyzwezdin/hexo-generator-redirect/issues"
-  },
-  "homepage": "https://github.com/sergeyzwezdin/hexo-generator-redirect#readme",
-  "peerDependencies": {
-    "hexo": "^4.2.0 || ^5.2.0"
-  }
+    "name": "hexo-generator-redirect",
+    "version": "1.4.0",
+    "description": "Hexo plugin that generates additional redirect pages",
+    "main": "index.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/sergeyzwezdin/hexo-generator-redirect.git"
+    },
+    "files": [
+        "index.js",
+        "lib/"
+    ],
+    "keywords": [
+        "hexo",
+        "generator",
+        "redirect"
+    ],
+    "author": "Sergey Zwezdin <sergey@zwezdin.com> (https://zwezdin.com)",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/sergeyzwezdin/hexo-generator-redirect/issues"
+    },
+    "homepage": "https://github.com/sergeyzwezdin/hexo-generator-redirect#readme",
+    "peerDependencies": {
+        "hexo": ">= 4.2.0"
+    }
 }
+
