--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "homepage": "https://github.com/sergeyzwezdin/hexo-generator-redirect#readme",
     "peerDependencies": {
         "hexo": ">= 4.2.0"
+    },
+    "devDependencies": {
+        "@types/hexo": "^3.8.7"
+    },
+    "dependencies": {
+        "hexo-fs": "^3.1.0",
+        "hexo-util": "^2.6.1"
     }
 }
-
