--- a/package.json
+++ b/package.json
@@ -26,6 +26,16 @@
         "hexo": ">= 4.2.0"
     },
     "devDependencies": {
-        "@types/hexo": "^3.8.7"
+        "@types/hexo": "^3.8.7",
+        "@types/hexo-util": "^0.6.4",
+        "@typescript-eslint/eslint-plugin": "^5.29.0",
+        "@typescript-eslint/parser": "^5.29.0",
+        "eslint": "^8.18.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "prettier": "^2.7.1"
+    },
+    "dependencies": {
+        "hexo-util": "^2.6.1"
     }
 }
