--- a/package.json
+++ b/package.json
@@ -17,11 +17,21 @@
         "redirect"
     ],
     "author": "Sergey Zwezdin <sergey@zwezdin.com> (https://zwezdin.com)",
+    "contributors": [
+        {
+            "name": "Dimas Lanjaka",
+            "email": "dimaslanjaka@gmail.com",
+            "url": "https://www.webmanajemen.com"
+        }
+    ],
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/sergeyzwezdin/hexo-generator-redirect/issues"
     },
     "homepage": "https://github.com/sergeyzwezdin/hexo-generator-redirect#readme",
+    "scripts": {
+        "test": "cd test && npm install && hexo generate --dev"
+    },
     "peerDependencies": {
         "hexo": ">= 4.2.0"
     },
