--- a/test/_config.yml
+++ b/test/_config.yml
@@ -97,7 +97,8 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: olive
+#theme: olive
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
