--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     },
     "homepage": "https://github.com/sergeyzwezdin/hexo-generator-redirect#readme",
     "scripts": {
-        "test": "cd test && npm install && hexo clean && hexo generate --dev"
+        "test": "cd test && npm install && hexo generate --dev"
     },
     "peerDependencies": {
         "hexo": ">= 4.2.0"
