--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
         "prettier": "^2.7.1"
     },
     "dependencies": {
-        "chalk": "^4.1.2",
+        "ansi-colors": "^4.1.3",
         "hexo-util": "^2.7.0",
         "upath": "^2.0.1"
     }
