--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     },
     "files": [
         "index.js",
-        "lib/"
+        "lib/",
+        "postinstall.js"
     ],
     "keywords": [
         "hexo",
@@ -31,20 +32,22 @@
     "homepage": "https://github.com/sergeyzwezdin/hexo-generator-redirect#readme",
     "scripts": {
         "test": "cd test && npm install && hexo generate --dev",
-        "update:postinstall": "curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/postinstall.js > postinstall.js",
-        "update": "npx npm-check-updates -u -x hexo,chalk"
+        "postinstall": "node postinstall.js",
+        "update": "curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/.prettierrc.json > prettierrc.json && curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/postinstall.js > postinstall.js && npx npm-check-updates -u -x hexo,chalk"
     },
     "peerDependencies": {
         "hexo": ">= 4.2.0"
     },
     "devDependencies": {
-        "@types/hexo": "^3.8.8",
-        "@types/hexo-util": "^0.6.5",
+        "@types/hexo": "https://github.com/dimaslanjaka/nodejs-package-types/tarball/hexo",
+        "@types/hexo-util": "https://github.com/dimaslanjaka/nodejs-package-types/raw/main/hexo-util/release/types-hexo-util.tgz",
         "@typescript-eslint/eslint-plugin": "^5.40.1",
         "@typescript-eslint/parser": "^5.40.1",
+        "cross-spawn": "https://github.com/dimaslanjaka/node-cross-spawn/tarball/typescript",
         "eslint": "^8.25.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "git-command-helper": "^1.1.4",
         "prettier": "^2.7.1"
     },
     "dependencies": {
