--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     },
     "homepage": "https://github.com/sergeyzwezdin/hexo-generator-redirect#readme",
     "scripts": {
-        "test": "cd test && npm install && hexo generate --dev",
+        "test": "run-s test:**",
+        "pretest": "npm run build",
+        "test:generate": "cd test && npm install && hexo generate --dev",
         "postinstall": "node postinstall.js",
-        "update": "curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/.prettierrc.json > prettierrc.json && curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/postinstall.js > postinstall.js && npx npm-check-updates -u -x hexo,chalk"
+        "update": "curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/.prettierrc.json > prettierrc.json && curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/postinstall.js > postinstall.js && curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/packer.js > packer.js && npx npm-check-updates -u && npm install",
+        "build": "node packer.js"
     },
     "peerDependencies": {
         "hexo": ">= 4.2.0"
@@ -41,18 +44,19 @@
     "devDependencies": {
         "@types/hexo": "https://github.com/dimaslanjaka/nodejs-package-types/tarball/hexo",
         "@types/hexo-util": "https://github.com/dimaslanjaka/nodejs-package-types/raw/main/hexo-util/release/types-hexo-util.tgz",
-        "@typescript-eslint/eslint-plugin": "^5.40.1",
-        "@typescript-eslint/parser": "^5.40.1",
+        "@typescript-eslint/eslint-plugin": "^5.48.0",
+        "@typescript-eslint/parser": "^5.48.0",
         "cross-spawn": "https://github.com/dimaslanjaka/node-cross-spawn/tarball/typescript",
-        "eslint": "^8.25.0",
-        "eslint-config-prettier": "^8.5.0",
+        "eslint": "^8.31.0",
+        "eslint-config-prettier": "^8.6.0",
         "eslint-plugin-prettier": "^4.2.1",
         "git-command-helper": "^1.1.4",
-        "prettier": "^2.7.1"
+        "npm-run-all": "^4.1.5",
+        "prettier": "^2.8.1"
     },
     "dependencies": {
         "ansi-colors": "^4.1.3",
-        "hexo-util": "^2.7.0",
+        "hexo-util": "^3.0.1",
         "upath": "^2.0.1"
     }
 }
