--- a/package.json
+++ b/package.json
@@ -37,25 +37,25 @@
         "pretest": "npm run build",
         "test:generate": "cd test && npm install && hexo generate --dev",
         "post-install": "node postinstall.js",
-        "update": "curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/.prettierrc.json > prettierrc.json && curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/postinstall.js > postinstall.js && curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/packer.js > packer.js && npx npm-check-updates -u && npm install",
+        "update": "curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/.prettierrc.json > prettierrc.json && curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/postinstall.js > postinstall.js && curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/packer.js > packer.js && npx npm-check-updates -u",
         "build": "node packer.js"
     },
     "peerDependencies": {
         "hexo": ">= 4.2.0"
     },
     "devDependencies": {
-        "@types/fs-extra": "^9.0.13",
+        "@types/fs-extra": "^11.0.1",
         "@types/hexo": "https://github.com/dimaslanjaka/nodejs-package-types/tarball/hexo",
         "@types/hexo-util": "https://github.com/dimaslanjaka/nodejs-package-types/raw/main/hexo-util/release/types-hexo-util.tgz",
-        "@typescript-eslint/eslint-plugin": "^5.48.0",
-        "@typescript-eslint/parser": "^5.48.0",
+        "@typescript-eslint/eslint-plugin": "^5.51.0",
+        "@typescript-eslint/parser": "^5.51.0",
         "cross-spawn": "https://github.com/dimaslanjaka/node-cross-spawn/tarball/typescript",
-        "eslint": "^8.31.0",
+        "eslint": "^8.33.0",
         "eslint-config-prettier": "^8.6.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "git-command-helper": "^1.1.4",
+        "git-command-helper": "^1.1.7",
         "npm-run-all": "^4.1.5",
-        "prettier": "^2.8.1"
+        "prettier": "^2.8.4"
     },
     "dependencies": {
         "ansi-colors": "^4.1.3",
