fix copy default redirect template

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "index.js",
         "lib/",
         "postinstall.js",
-        "template",
+        "template/",
         "!lib/*.txt"
     ],
     "keywords": [
