--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,84 +5,24 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "command": "ts-node src/generator.ts",
-      "name": "Generate",
+      "command": "yarn install && hexo clean && hexo s --dev",
+      "name": "start server",
       "request": "launch",
       "type": "node-terminal",
       "env": {
         "NODE_ENV": "development"
       },
-      "cwd": "${workspaceFolder}"
+      "cwd": "${workspaceFolder}/../.."
     },
     {
-      "command": "gulp",
-      "name": "gulp default",
+      "command": "yarn install && hexo clean && hexo --debug --dev",
+      "name": "debug",
       "request": "launch",
       "type": "node-terminal",
       "env": {
         "NODE_ENV": "development"
       },
-      "outFiles": [
-        "${workspaceFolder}/**/*.js",
-        "!**/node_modules/**"
-      ],
-      "pauseForSourceMap": false,
-      "cwd": "${workspaceFolder}"
-    },
-    {
-      "command": "gulp generate:article",
-      "name": "gulp gen:article",
-      "request": "launch",
-      "type": "node-terminal",
-      "env": {
-        "NODE_ENV": "development"
-      },
-      "cwd": "${workspaceFolder}"
-    },
-    {
-      "command": "npm run test",
-      "name": "npm:test",
-      "request": "launch",
-      "type": "node-terminal"
-    },
-    {
-      "command": "ts-node tests/index.ts --standalone",
-      "name": "standalone:test",
-      "request": "launch",
-      "type": "node-terminal"
-    },
-    {
-      "command": "gulp generate --nocache",
-      "name": "[dev] gen:no-cache",
-      "request": "launch",
-      "type": "node-terminal",
-      "env": {
-        "NODE_ENV": "development"
-      },
-    },
-    {
-      "command": "gulp server --nocache",
-      "name": "[dev] server",
-      "request": "launch",
-      "type": "node-terminal",
-      "env": {
-        "NODE_ENV": "development"
-      },
-    },
-    {
-      "command": "gulp --nocache",
-      "name": "[dev] gulp:no-cache",
-      "request": "launch",
-      "type": "node-terminal",
-      "env": {
-        "NODE_ENV": "development"
-      },
-    },
-    {
-      "command": "php -S localhost:4000 -t docs",
-      "name": "PHP SERVER",
-      "request": "launch",
-      "type": "node-terminal"
+      "cwd": "${workspaceFolder}/../.."
     }
   ]
 }
