chore: hotfix copy default redirect layout
hexo: 6.3.0
yarn: 4.3.0
layout engines: ejs, nunjucks, pug

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "command": "yarn install && hexo clean && hexo s --dev",
+      "command": "yarn up hexo-generator-redirect@./packages/hexo-generator-redirect && hexo clean && hexo s --dev --debug",
       "name": "start server",
       "request": "launch",
       "type": "node-terminal",
@@ -15,7 +15,7 @@
       "cwd": "${workspaceFolder}/../.."
     },
     {
-      "command": "yarn install && hexo clean && hexo --debug --dev",
+      "command": "yarn up hexo-generator-redirect@./packages/hexo-generator-redirect && hexo clean && hexo --debug --dev",
       "name": "debug",
       "request": "launch",
       "type": "node-terminal",
