--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,24 +5,34 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "command": "yarn up hexo-generator-redirect@./packages/hexo-generator-redirect && hexo clean && hexo s --dev",
-      "name": "start server",
+      "command": "hexo s",
+      "name": "prod server",
+      "request": "launch",
+      "type": "node-terminal",
+      "env": {
+        "NODE_ENV": "production"
+      },
+      "cwd": "${workspaceFolder}/../../site"
+    },
+    {
+      "command": "hexo clean && hexo s --dev",
+      "name": "dev server",
       "request": "launch",
       "type": "node-terminal",
       "env": {
         "NODE_ENV": "development"
       },
-      "cwd": "${workspaceFolder}/../.."
+      "cwd": "${workspaceFolder}/../../site"
     },
     {
-      "command": "yarn up hexo-generator-redirect@./packages/hexo-generator-redirect && hexo clean && hexo --debug --dev",
+      "command": "hexo clean && hexo --debug --dev",
       "name": "debug",
       "request": "launch",
       "type": "node-terminal",
       "env": {
         "NODE_ENV": "development"
       },
-      "cwd": "${workspaceFolder}/../.."
+      "cwd": "${workspaceFolder}/../../site"
     }
   ]
 }
