--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "build": "node packer.js --yarn"
     },
     "peerDependencies": {
-        "hexo": ">= 4.2.0"
+        "hexo": "^4.2.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
     },
     "dependencies": {
         "ansi-colors": "^4.1.3",
@@ -53,7 +53,7 @@
         "@types/fs-extra": "^11.0.1",
         "@typescript-eslint/eslint-plugin": "^5.54.1",
         "@typescript-eslint/parser": "^5.54.1",
-        "cross-spawn": "https://github.com/dimaslanjaka/node-cross-spawn/tarball/private",
+        "cross-spawn": "https://github.com/dimaslanjaka/node-cross-spawn/raw/5560156/release/cross-spawn.tgz",
         "eslint": "^8.35.0",
         "eslint-config-prettier": "^8.7.0",
         "eslint-plugin-prettier": "^4.2.1",
