--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     },
     "homepage": "https://github.com/sergeyzwezdin/hexo-generator-redirect#readme",
     "scripts": {
-        "test": "run-s test:**",
+        "test": "run-s \"test:**\"",
         "pretest": "npm run build",
         "test:generate": "cd test && npm install && hexo generate --dev",
         "post-install": "node postinstall.js",
-        "update": "curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/.prettierrc.json > .prettierrc.json && curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/postinstall.js > postinstall.js && curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/packer.js > packer.js && npx npm-check-updates -u",
+        "update": "run-s \"update:**\"",
+        "update:packer": "curl -L https://github.com/dimaslanjaka/nodejs-package-types/raw/main/packer.js > packer.js",
+        "update:ncu": "npx npm-check-updates -u",
         "build": "node packer.js --yarn"
     },
     "peerDependencies": {
@@ -45,20 +47,20 @@
     },
     "dependencies": {
         "ansi-colors": "^4.1.3",
-        "fs-extra": "^11.1.0",
+        "fs-extra": "^11.1.1",
         "hexo-util": "^3.0.1",
         "upath": "^2.0.1"
     },
     "devDependencies": {
         "@types/fs-extra": "^11.0.1",
-        "@typescript-eslint/eslint-plugin": "^5.54.1",
-        "@typescript-eslint/parser": "^5.54.1",
+        "@typescript-eslint/eslint-plugin": "^5.59.6",
+        "@typescript-eslint/parser": "^5.59.6",
         "cross-spawn": "https://github.com/dimaslanjaka/node-cross-spawn/raw/5560156/release/cross-spawn.tgz",
-        "eslint": "^8.35.0",
-        "eslint-config-prettier": "^8.7.0",
+        "eslint": "^8.40.0",
+        "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
         "git-command-helper": "^1.2.3",
         "npm-run-all": "^4.1.5",
-        "prettier": "^2.8.4"
+        "prettier": "^2.8.8"
     }
 }
