--- a/package.json
+++ b/package.json
@@ -55,12 +55,12 @@
         "@types/fs-extra": "^11.0.1",
         "@typescript-eslint/eslint-plugin": "^5.59.6",
         "@typescript-eslint/parser": "^5.59.6",
+        "binary-collections": "^1.0.3",
         "cross-spawn": "https://github.com/dimaslanjaka/node-cross-spawn/raw/5560156/release/cross-spawn.tgz",
         "eslint": "^8.41.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
         "git-command-helper": "^1.2.5",
-        "npm-run-all": "^4.1.5",
         "prettier": "^2.8.8"
     }
 }
