--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "ansi-colors": "^4.1.3",
         "fs-extra": "^11.1.1",
         "hexo-util": "^3.0.1",
+        "sbg-utility": "^1.1.2",
         "upath": "^2.0.1"
     },
     "devDependencies": {
