--- a/package.json
+++ b/package.json
@@ -54,14 +54,15 @@
     },
     "devDependencies": {
         "@types/fs-extra": "^11.0.1",
-        "@typescript-eslint/eslint-plugin": "^5.59.6",
-        "@typescript-eslint/parser": "^5.59.6",
+        "@typescript-eslint/eslint-plugin": "^6.4.1",
+        "@typescript-eslint/parser": "^6.4.1",
         "binary-collections": "^1.0.3",
         "cross-spawn": "https://github.com/dimaslanjaka/node-cross-spawn/raw/5560156/release/cross-spawn.tgz",
-        "eslint": "^8.41.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-prettier": "^4.2.1",
+        "eslint": "^8.47.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.0",
         "git-command-helper": "^2.0.1",
-        "prettier": "^2.8.8"
+        "prettier": "^3.0.2",
+        "typescript": "^5.2.2"
     }
 }
