--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     },
     "devDependencies": {
         "@types/fs-extra": "^11.0.1",
+        "@types/hexo": "^3.8.8",
         "@typescript-eslint/eslint-plugin": "^6.4.1",
         "@typescript-eslint/parser": "^6.4.1",
         "binary-collections": "^1.0.3",
