refactor: add `--debug` arg

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
       "cwd": "${workspaceFolder}/../../site"
     },
     {
-      "command": "hexo clean && hexo s --dev",
+      "command": "hexo clean && hexo s --dev --debug",
       "name": "dev server",
       "request": "launch",
       "type": "node-terminal",
